# finderinfo-rust

./: Cargo.toml  LICENSE  README.md
finder_info_bin/: Cargo.toml
src/: lib.rs
