[package]
name = "finder_info"
version = "0.2.1"
authors = ["Dropbox Engineering <eng@dropbox.com>"]
license = "Apache-2.0"
description = "A library to parse Apple HFS/HFS+/APFS FinderInfo attribute."
repository = "https://github.com/dropbox/finderinfo-rust"
edition = "2018"

[dependencies]
byteorder = "1.1"
